clusters/k8s/default/apps/traefik/traefik/ingress/podinfo.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: podinfo
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`podinfo.icecrown.online`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
