clusters/k8s/default/apps/traefik/traefik/ingress/qbittorrent.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`qbittorrent.icecrown.online`)
      services:
        - kind: Service
          name: qbittorrent
          namespace: default
          passHostHeader: false
          port: 8080
